--- a/.env.template
+++ b/.env.template
@@ -1,2 +1,3 @@
-JWT_SECRET=
-MONGO_HOST=[default: 'mongodb://localhost:27017']
+JWT_SECRET=required
+MONGO_HOST=optional, default: 'mongodb://localhost:27017'
+MONGO_DB=optional, default: 'nextjs'
