installed nodemailer and applied eslint hints

--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,8 @@
 JWT_SECRET=required
 MONGO_HOST=optional, default: 'mongodb://localhost:27017'
 MONGO_DB=optional, default: 'nextjs'
+SMTP_HOST=required
+SMTP_PORT=required
+SMTP_SECURE=required (true if PORT is 465, false if PORT is 587)
+SMTP_USER=required
+SMTP_PASSWORD=required
