--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.5",
     "next": "9.3.3",
+    "nodemailer": "^6.4.6",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   },
