--- a/.env.template
+++ b/.env.template
@@ -6,3 +6,5 @@ SMTP_PORT=required
 SMTP_SECURE=required (true if PORT is 465, false if PORT is 587)
 SMTP_USER=required
 SMTP_PASSWORD=required
+ADMIN_EMAIL=required (no validation happening, can be made up for test purposes)
+ADMIN_PASSWORD=required
