--- a/.env.template
+++ b/.env.template
@@ -7,4 +7,5 @@ SMTP_SECURE=required (true if PORT is 465, false if PORT is 587)
 SMTP_USER=required
 SMTP_PASSWORD=required
 ADMIN_EMAIL=required (no validation happening, can be made up for test purposes)
+ADMIN_NAME=optional, default: 'root'
 ADMIN_PASSWORD=required
