--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -3,8 +3,9 @@ env:
   es6: true
   node: true
 extends:
-  - 'plugin:react/recommended'
+  - "plugin:react/recommended"
   - airbnb
+  - prettier
 globals:
   Atomics: readonly
   SharedArrayBuffer: readonly
