--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,19 +1,19 @@
 env:
-  browser: true
-  es6: true
-  node: true
+    browser: true
+    es6: true
+    node: true
 extends:
-  - "plugin:react/recommended"
-  - airbnb
-  - prettier
+    - 'plugin:react/recommended'
+    - airbnb
+    - prettier
 globals:
-  Atomics: readonly
-  SharedArrayBuffer: readonly
+    Atomics: readonly
+    SharedArrayBuffer: readonly
 parserOptions:
-  ecmaFeatures:
-    jsx: true
-  ecmaVersion: 2018
-  sourceType: module
+    ecmaFeatures:
+        jsx: true
+    ecmaVersion: 2018
+    sourceType: module
 plugins:
-  - react
+    - react
 rules: {}
