--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,17 @@
-version: "3"
+version: '3'
 services:
-  web:
-    build: .
-    ports:
-      - "3000:3000"
-    links:
-      - mongo
-  mongo:
-    image: mongo:4.2.3-bionic
+    web:
+        build: .
+        command: npm run start
+        ports:
+            - 3000:3000
+        links:
+            - mongo
+        env_file:
+            - ./.env
+        environment:
+            - NODE_ENV=production
+    mongo:
+        image: mongo:4.2.3-bionic
+        ports:
+            - 27017 
