some tweaks with docker compose and navigation between month- and week-view is no possible

--- a/.dockerignore
+++ b/.dockerignore
@@ -3,7 +3,12 @@ npm-debug.log
 .next
 .git
 .gitignore
+.dockerignore
 Dockerfile
+docker-compose.yml
 .eslintrc.yml
+.prettierrc.yml
+.env
 .env.template
+TODO
 README.md
