--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,9 @@ services:
         env_file:
             - ./.env
         environment:
+            - MONGO_HOST=mongodb://mongo:27017
             - NODE_ENV=production
     mongo:
-        image: mongo:4.2.3-bionic
+        image: mongo:4.2.6-bionic
         ports:
-            - 27017 
+            - 27017
