--- a/web-service.yaml
+++ b/web-service.yaml
@@ -13,6 +13,7 @@ spec:
         - name: '3000'
           port: 3000
           targetPort: 3000
+    type: NodePort
     selector:
         io.kompose.service: web
 status:
