--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
     web:
         build: .
-        command: npm run dev
+        command: npm run start
         ports:
             - 3000:3000
         links:
