--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "dev": "node server.js",
         "build": "next build",
-        "start": "NODE_ENV=production node server.js"
+        "start": "node server.js"
     },
     "dependencies": {
         "@hapi/joi": "^17.1.1",
